# vibefunc

./: .gitignore  README.md  pyproject.toml
src/vibefunc/: __init__.py
tests/: test_vibefunc.py
