[project]
name = "vibefunc"
version = "0.1.0"
description = "Vibe your Python functions just for fun"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.28.1",
    "openai>=1.99.6",
]
license = {text = "MIT"}
authors = [
    { name = "Wenjie Wei", email = "weiwenjie@westlake.edu.cn" },
]

[project.urls]
homepage = "https://github.com/wjwei-handsome/vibefunc"
